omni/tests/goldens/types/unknown_type_21.err
tests/goldens/types/unknown_type_21.omni:1:13: error: unknown type "Mystery21"
     1 | let value21:Mystery21 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_21.omni:1:1: error: cannot assign int to Mystery21
     1 | let value21:Mystery21 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery21 or change the variable type to int
