omni/tests/goldens/types/unknown_type_21.omni
let value21:Mystery21 = 1
